# MatterSolution

./: MatterSolution.slcw  MatterSolution.slpb  vscsolution.conf
Matter-Bootloader/: .projectlinkstore  Matter-Bootloader.pintool  Matter-Bootloader.slcp  Matter-Bootloader.slpb  Matter-Bootloader.slps  vscode.conf
Matter-Bootloader/.uceditor/: .Matter-Bootloader.pwminst0.cedit  .Matter-Bootloader.uartdrv_core.cedit  .Matter-Bootloader.uartdrv_eusartinst0.cedit
Matter-Bootloader/artifact/: Matter-Bootloader-crc.s37  Matter-Bootloader.s37
Matter-Bootloader/autogen/: linkerfile.ld  sl_component_catalog.h  sli_psa_config_autogen.h
Matter-Bootloader/autogen/.slc_state/: .crc_config.crc
Matter-Bootloader/autogen/sbom/: cyclonedx_bom.json  cyclonedx_bom.xml  spdx_bom.spdx  spdx_bom.spdx.json
Matter-Bootloader/cmake_gcc/: CMakeLists.txt  CMakePresets.json  Matter-Bootloader.cmake  toolchain.cmake
Matter-Bootloader/config/: btl_core_cfg.h  btl_internal_storage_cfg.h  btl_storage_cfg.h  btl_storage_slot_cfg.h  pin_config.h  sl_mbedtls_trustzone_config.h  sl_uartdrv_eusart_inst0_config.h
Matter-Bootloader/trashed_modified_files/config/: sl_pwm_init_inst0_config.h  sl_simple_led_inst_config.h  sl_uartdrv_eusart_inst0_config.h  uartdrv_config.h
MatterLightSwitch/: .projectchecksums  .projectlinkstore  MatterLightSwitch.pintool  MatterLightSwitch.slcp  MatterLightSwitch.slpb  MatterLightSwitch.slps  vscode.conf
MatterLightSwitch/.uceditor/: .MatterLightSwitch.%extension-matter%matter_provision_default.cedit  .MatterLightSwitch.i2cspminst0.cedit  .MatterLightSwitch.pwmpwm.cedit  .MatterLightSwitch.simple_ledinst0.cedit  .MatterLightSwitch.uartdrv_eusartvcom.cedit
MatterLightSwitch/autogen/: gatt_db.h  gen.properties  linkerfile.ld  sl_bluetooth.c  sl_component_catalog.h  sl_event_handler.c  sl_i2cspm_init.c  sl_pwm_init.c  sl_pwm_instances.h  sl_simple_led_instances.c  sl_simple_led_instances.h  sli_mbedtls_config_autogen.h  sli_psa_builtin_config_autogen.h  sli_psa_config_autogen.h
MatterLightSwitch/autogen/.slc_state/: .crc_config.crc
MatterLightSwitch/autogen/sbom/: cyclonedx_bom.json  cyclonedx_bom.xml  spdx_bom.spdx  spdx_bom.spdx.json
MatterLightSwitch/autogen/zap-generated/: IMClusterCommandHandler.cpp  access.h  cluster-objects.cpp  endpoint_config.h  gen_config.h
MatterLightSwitch/autogen/zap-generated/app/: PluginApplicationCallbacks.h  callback-stub.cpp  cluster-init-callback.cpp
MatterLightSwitch/autogen/zap-generated/app-common/zap-generated/: callback.h  cluster-enums-check.h  cluster-enums.h  cluster-objects.h
MatterLightSwitch/autogen/zap-generated/attributes/: Accessors.cpp
MatterLightSwitch/autogen/zap-generated/clusters/AccessControl/: AttributeIds.h  Attributes.h  Attributes.ipp  CommandIds.h  Enums.h  EnumsCheck.h  EventIds.h  Events.h  Events.ipp  Ids.h  Metadata.h  Structs.h  Structs.ipp
MatterLightSwitch/autogen/zap-generated/clusters/AccountLogin/: AttributeIds.h  CommandIds.h  Ids.h  Metadata.h
MatterLightSwitch/autogen/zap-generated/clusters/Actions/: AttributeIds.h  CommandIds.h  Ids.h  Metadata.h
MatterLightSwitch/autogen/zap-generated/clusters/ActivatedCarbonFilterMonitoring/: AttributeIds.h  CommandIds.h  Ids.h  Metadata.h
MatterLightSwitch/autogen/zap-generated/clusters/AdministratorCommissioning/: AttributeIds.h  CommandIds.h  Ids.h  Metadata.h
MatterLightSwitch/autogen/zap-generated/clusters/AirQuality/: AttributeIds.h  CommandIds.h  Ids.h  Metadata.h
MatterLightSwitch/autogen/zap-generated/clusters/ApplicationBasic/: AttributeIds.h  CommandIds.h  Ids.h  Metadata.h  Structs.ipp
MatterLightSwitch/autogen/zap-generated/clusters/ApplicationLauncher/: AttributeIds.h  CommandIds.h  Ids.h  Metadata.h  Structs.h  Structs.ipp
MatterLightSwitch/autogen/zap-generated/clusters/AudioOutput/: AttributeIds.h  CommandIds.h  Ids.h  Metadata.h
MatterLightSwitch/autogen/zap-generated/clusters/BallastConfiguration/: AttributeIds.h  CommandIds.h  Ids.h  Metadata.h
MatterLightSwitch/autogen/zap-generated/clusters/BasicInformation/: AttributeIds.h  CommandIds.h  Ids.h  Metadata.h
MatterLightSwitch/autogen/zap-generated/clusters/Binding/: AttributeIds.h  CommandIds.h  Ids.h  Metadata.h
MatterLightSwitch/cmake_gcc/: CMakeLists.txt  CMakePresets.json  MatterLightSwitch.cmake  toolchain.cmake
MatterLightSwitch/config/: pin_config.h  sl_btctrl_config.h  sl_i2cspm_inst0_config.h  sl_matter_config.h  sl_matter_icd_config.h  sl_mbedtls_config.h  sl_memory_manager_region_config.h  sl_openthread_ble_cli_config.h  sl_openthread_features_config.h  sl_openthread_rtos_config.h  sl_pwm_init_pwm_config.h  sl_rail_util_pti_config.h  sl_rail_util_rssi_config.h  sl_rail_util_sequencer_config.h  sl_simple_led_inst0_config.h  sl_uartdrv_eusart_vcom_config.h  uartdrv_config.h
MatterLightSwitch/config/app/: AppBuildConfig.h
MatterLightSwitch/config/btconf/: slc_args.json
MatterLightSwitch/config/common/: icd-lit-light-switch-app.zap  icd-lit-light-switch-app.zap~  slc_args.json
MatterLightSwitch/config/provision/: slc_args.json
MatterLightSwitch/include/: AppEvent.h  AppTask.h  IadcButtons.h  Mpr121.h
MatterLightSwitch/linker_options/: ot-rtos-wrapper-options
MatterLightSwitch/src/: AppTask.cpp  DataModelCallbacks.cpp  IadcButtons.cpp  IadcButtons.h  LightSwitchMgr.cpp  Mpr121.cpp
MatterSolution_cmake/: CMakeLists.txt  CMakePresets.json
artifact/: MatterSolution-app-only.gbl  MatterSolution-full.s37
context/: Project Overview.txt
(+602 files in other folders)
